[gd_scene load_steps=9 format=3 uid="uid://ddacjsjtjlf46"]

[ext_resource type="PackedScene" uid="uid://dmpkbdyoo1qvm" path="res://scenes/panels/Panel.tscn" id="1_xed3p"]
[ext_resource type="Script" path="res://scripts/shields-panel.gd" id="2_qxdfe"]
[ext_resource type="Texture2D" uid="uid://ddn0doacr73sl" path="res://assets/images/ship-outline.png" id="3_wi37w"]
[ext_resource type="Texture2D" uid="uid://bkmfihslpmcpi" path="res://assets/images/quarter-shield.png" id="4_a0kgy"]
[ext_resource type="Texture2D" uid="uid://duc4jcdfqkkdc" path="res://assets/images/plus-button-normal.png" id="5_cdmok"]
[ext_resource type="Texture2D" uid="uid://dj05uv380ng6f" path="res://assets/images/plus-button-pressed.png" id="6_avopi"]
[ext_resource type="AudioStream" uid="uid://debabreqsixt2" path="res://assets/sounds/shield-up.wav" id="7_f7428"]
[ext_resource type="AudioStream" uid="uid://dud637wjgn7ht" path="res://assets/sounds/shield damage.wav" id="8_ki370"]

[node name="Panel" instance=ExtResource("1_xed3p")]
script = ExtResource("2_qxdfe")

[node name="Background" parent="." index="0"]
region_rect = Rect2(0, 190, 418, 297)

[node name="AlienFightTimer" type="Timer" parent="." index="1"]
wait_time = 30.0
one_shot = true

[node name="AlienShotsFiredTimer" type="Timer" parent="." index="2"]
one_shot = true

[node name="ShieldUpSound" type="AudioStreamPlayer" parent="." index="3"]
stream = ExtResource("7_f7428")
bus = &"SFX"

[node name="ShieldDamageSound" type="AudioStreamPlayer" parent="." index="4"]
stream = ExtResource("8_ki370")
bus = &"SFX"

[node name="RichTextLabel" parent="." index="5"]
offset_left = -72.0
offset_top = -144.0
offset_right = 203.0
offset_bottom = -104.0
text = "Shield Activation"

[node name="Shields2" type="Node2D" parent="." index="6"]
position = Vector2(0, 12)

[node name="ShipOutline" type="Sprite2D" parent="Shields2" index="0"]
scale = Vector2(0.15, 0.15)
texture = ExtResource("3_wi37w")

[node name="Shields" type="Node2D" parent="Shields2" index="1"]
scale = Vector2(0.8, 0.8)

[node name="TopShield" type="Sprite2D" parent="Shields2/Shields" index="0"]
modulate = Color(1, 1, 1, 0.188235)
position = Vector2(0, -82)
texture = ExtResource("4_a0kgy")

[node name="LeftShield" type="Sprite2D" parent="Shields2/Shields" index="1"]
modulate = Color(1, 1, 1, 0.188235)
position = Vector2(-82, 0)
rotation = -1.5708
texture = ExtResource("4_a0kgy")

[node name="RightShield" type="Sprite2D" parent="Shields2/Shields" index="2"]
modulate = Color(1, 1, 1, 0.188235)
position = Vector2(82, 0)
rotation = 1.5708
texture = ExtResource("4_a0kgy")

[node name="BottomShield" type="Sprite2D" parent="Shields2/Shields" index="3"]
modulate = Color(1, 1, 1, 0.188235)
position = Vector2(0, 82)
rotation = -3.14159
texture = ExtResource("4_a0kgy")

[node name="ShieldButtons" type="Node2D" parent="Shields2" index="2"]
scale = Vector2(0.9, 0.9)

[node name="TopShieldRestoreButton" type="TextureButton" parent="Shields2/ShieldButtons" index="0"]
offset_left = -25.0
offset_top = -141.0
offset_right = 75.0
offset_bottom = -41.0
scale = Vector2(0.5, 0.5)
texture_normal = ExtResource("5_cdmok")
texture_pressed = ExtResource("6_avopi")

[node name="RightShieldRestoreButton" type="TextureButton" parent="Shields2/ShieldButtons" index="1"]
offset_left = 101.0
offset_top = -24.0
offset_right = 201.0
offset_bottom = 76.0
scale = Vector2(0.5, 0.5)
texture_normal = ExtResource("5_cdmok")
texture_pressed = ExtResource("6_avopi")

[node name="BottomShieldRestoreButton" type="TextureButton" parent="Shields2/ShieldButtons" index="2"]
offset_left = -25.0
offset_top = 90.0
offset_right = 75.0
offset_bottom = 190.0
scale = Vector2(0.5, 0.5)
texture_normal = ExtResource("5_cdmok")
texture_pressed = ExtResource("6_avopi")

[node name="LeftShieldRestoreButton" type="TextureButton" parent="Shields2/ShieldButtons" index="3"]
offset_left = -145.0
offset_top = -24.0
offset_right = -45.0
offset_bottom = 76.0
scale = Vector2(0.5, 0.5)
texture_normal = ExtResource("5_cdmok")
texture_pressed = ExtResource("6_avopi")

[connection signal="timeout" from="AlienFightTimer" to="." method="_on_alien_fight_timer_timeout"]
[connection signal="timeout" from="AlienShotsFiredTimer" to="." method="_on_alien_shots_fired_timer_timeout"]
[connection signal="pressed" from="Shields2/ShieldButtons/TopShieldRestoreButton" to="." method="_on_top_shield_restore_button_pressed"]
[connection signal="pressed" from="Shields2/ShieldButtons/RightShieldRestoreButton" to="." method="_on_right_shield_restore_button_pressed"]
[connection signal="pressed" from="Shields2/ShieldButtons/BottomShieldRestoreButton" to="." method="_on_bottom_shield_restore_button_pressed"]
[connection signal="pressed" from="Shields2/ShieldButtons/LeftShieldRestoreButton" to="." method="_on_left_shield_restore_button_pressed"]
